--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Urbanist', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --red: #f2545b;
+  --red-active: #b53e44;
+  --white: #f3f7f0;
+  --white-active: #ede7e7;
+  --dark: #0c0505;
+  --grey: #6d7682;
+}
+
+a {
+  text-decoration: none;
 }
